<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.list.ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filterAllRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filter_all" />

        <TextView
            android:id="@+id/filterIncomingRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_incomming" />

        <TextView
            android:id="@+id/filterOutgoingRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_outgoing" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_transaction" />


        <Button
            android:id="@+id/reloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_reload" />

    </FrameLayout>

</LinearLayout>
